<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hint_slideshow_free_view_1">Automatic drive of the slideshow (progression through images) is available in the paid version</string>
    <string name="privacy_policy_uri" translatable="false">https://api-8938561204297001672-604498.firebaseapp.com/free/data-use/index.html</string>
    <string name="product_title">Product name</string>
    <string name="product_purchased">Purchased</string>
    <string name="heading_products_for_sale">Items for sale</string>
    <string name="app_purchases_overall_heading">App Purchases</string>
    <string name="alert_error_unable_to_retrieve_billing_information">Unable to retrieve billing information. Please try again later. If the error continues, please drop me an email.</string>
    <string name="buy_now_button">Buy</string>
    <string name="manage_app_purchases">App Purchases</string>
    <string name="app_purchases_tab_shop">Shop</string>
    <string name="app_purchases_tab_my_purchases">Active Purchases</string>
    <string name="error_retrieving_product_information">Unable to retrieve product information at this time. Please try again soon.</string>
    <string name="purchased_price_label">Cost</string>
    <string name="heading_products_purchased">My Purchases</string>
    <string name="purchased_date">Purchased</string>
    <string name="purchase_order_id">Order ID</string>
    <string name="purchase_recurring">Recurring order</string>
    <string name="manage_subscription_button">Manage on Google</string>
    <string name="loading_product_details_please_wait">Loading Product Details</string>
    <string name="loading_purchase_details_please_wait">Loading purchase details</string>
    <string name="no_active_purchases">No active Purchases</string>
    <string name="unable_to_validate_subscription">Unable to validate subscription.</string>
    <string name="alert_paid_or_subscription_feature_only">Access to this feature is available by subscription or in the paid version of the app on google play.</string>
    <string name="alert_paid_or_subscription_feature_only_piwigo_client_plugin">Access to this feature is available by subscription or in the paid version of the app on google play. NOTE: You will need to install the PiwigoClientWsExts plugin on your server. This is an essential requirement at this time as it adds missing functionality to your server.</string>
    <string name="not_interested_in_purchases">I am not interested in paying money.</string>
    <string name="alert_not_interested_in_paying">Many thousands of hours have been spent developing this app.\n\nAdverts are irritating, and offer meaningful revenue only to Google.\n\nPlease consider either taking a subscription or installing the paid version of this app if you find it useful.\n\nIf you are genuinely not interested in making any payments (or wish to prevent this for some reason), continue and the option to do so will be removed from the menu. To reinstate this possibility, removal and reinstall of the app will likely be needed.</string>
    <string name="button_remove">Remove</string>
    <string name="alert_purchases_option_removed_from_menu">The purchases option has been removed from the app menu</string>
</resources>