<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="?attr/colorSurface">

    <TextView
        android:id="@+id/heading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/guideline_margin_top"
        app:layout_constraintStart_toEndOf="@id/guideline_margin_start"
        app:layout_constraintEnd_toStartOf="@+id/guideline_margin_end"
        android:textAppearance="?textAppearanceHeadline5"
        android:visibility="visible"
        android:text="@string/heading_products_purchased" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_header_views"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        android:paddingBottom="50dp"
        app:constraint_referenced_ids="heading" />

    <TextView
        android:id="@+id/empty_list_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_active_purchases"
        style="?textAppearanceBody1"
        app:layout_constraintStart_toStartOf="@id/guideline_margin_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_margin_end"
        app:layout_constraintTop_toBottomOf="@id/barrier_header_views"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintHeight_default="spread"
        app:layout_constraintStart_toStartOf="@id/guideline_margin_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_margin_end"
        app:layout_constraintBottom_toTopOf="@+id/product_view_all_google_subscriptions_button"
        app:layout_constraintTop_toBottomOf="@id/barrier_header_views"
        app:layout_constraintHeight_min="50dp"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintVertical_weight="1"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/product_view_all_google_subscriptions_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/manage_subscription_button"
        style="?materialButtonStyle"
        app:layout_constraintTop_toBottomOf="@id/list"
        app:layout_constraintBottom_toTopOf="@id/guideline_margin_bottom"
        app:layout_constraintStart_toEndOf="@id/guideline_margin_start"
        app:layout_constraintEnd_toStartOf="@id/guideline_margin_end"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintHorizontal_bias="1"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_margin_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/fragment_margin_top"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_margin_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/fragment_margin_bottom"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_margin_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/fragment_margin_start"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_margin_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/fragment_margin_end"/>
</androidx.constraintlayout.widget.ConstraintLayout>